[project]
name = "kml2gpx"
description = "Converts KML or flights from Private Radar to GPX"
dynamic = ["version"]
authors = [{ name = "Thomas Calmant", email = "thomas.calmant@gmail.com" }]
readme = "README.md"
keywords = ["kml", "gpx", "private-radar"]
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = ["requests>=2.26.0", "gpxpy>=1.5.0", "lxml>=4.6.3"]

[project.scripts]
kml2gpx = "kml2gpx.main:main"

[project.urls]
"Homepage" = "https://github.com/tcalmant/kml2gpx"
"Bug Tracker" = "https://github.com/tcalmant/kml2gpx/issues"

[tool.setuptools.dynamic]
version = { attr = "kml2gpx.__version__" }

[tool.black]
line-length = 80
